--- a/src/Diwire.Analyzers/Diwire.Analyzers/Resources.resx
+++ b/src/Diwire.Analyzers/Diwire.Analyzers/Resources.resx
@@ -118,19 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AnalyzerDescription" xml:space="preserve">
-    <value>Class should override RegisterType method.</value>
+    <value>Type names should be all uppercase.</value>
     <comment>An optional longer localizable description of the diagnostic.</comment>
   </data>
   <data name="AnalyzerMessageFormat" xml:space="preserve">
-    <value>The class '{0}' does not override the RegisterType method</value>
+    <value>Type name '{0}' contains lowercase letters</value>
     <comment>The format-able message the diagnostic displays.</comment>
   </data>
   <data name="AnalyzerTitle" xml:space="preserve">
-    <value>Override RegisterType method</value>
+    <value>Type name contains lowercase letters</value>
     <comment>The title of the diagnostic.</comment>
-  </data>
-  <data name="FixProviderTitle" xml:space="preserve">
-    <value>Override RegisterType method</value>
-    <comment>Title for the fix provider</comment>
   </data>
 </root>
